# ec2imds

./: README.md  pyproject.toml
doc/: imds-categories  ipv6only.md
src/ec2imds/: __init__.py  __main__.py  exceptions.py
